# xionmarkets-smart-contracts

./: Cargo.toml  README.md
contracts/factory/: lib.rs  state.rs
contracts/market/: contract.rs  execute.rs
scripts/: deploy_cw20.sh  deploy_factory.sh  deploy_market.sh  instantiate_cw20.sh
smart_contracts/: compile.sh
smart_contracts/contracts/factory/: Cargo.toml  contract.rs  execute.rs
smart_contracts/contracts/market/: Cargo.toml  lib.rs  query.rs  state.rs
smart_contracts/scripts/: instantiate_factory.sh  interact_factory.sh
smart_contracts/tests/src/: lib.rs
tests/: Cargo.toml
tests/src/: unit_tests.rs
